# BetterOCR

./: .gitignore  .prettierignore  .prettierrc.js  .pylintrc  README.md  main.py  package.json  pyproject.toml  tsconfig.json
betterocr/: __init__.py  detect.py  parsers.py
betterocr/easy_pororo_ocr/pororo/: __init__.py  pororo.py
betterocr/easy_pororo_ocr/pororo/tasks/: __init__.py
betterocr/engines/easy_pororo_ocr/: __init__.py
betterocr/engines/easy_pororo_ocr/pororo/: __init__.py  pororo.py  utils.py
betterocr/engines/easy_pororo_ocr/pororo/models/brainOCR/: __init__.py  _dataset.py  _modules.py  brainocr.py  craft.py  craft_utils.py  detection.py  imgproc.py  model.py  recognition.py  utils.py
betterocr/engines/easy_pororo_ocr/pororo/models/brainOCR/modules/: basenet.py  feature_extraction.py  prediction.py  transformation.py  (+1 more)
betterocr/engines/easy_pororo_ocr/pororo/tasks/: __init__.py  optical_character_recognition.py
betterocr/engines/easy_pororo_ocr/pororo/tasks/utils/: base.py  config.py  download_utils.py  tokenizer.py
betterocr/engines/easy_pororo_ocr/utils/: __init__.py  image_convert.py  image_util.py  pre_processing.py
betterocr/ocr_engines/: __init__.py  easy_ocr.py  easy_pororo_ocr.py  tesseract.py
betterocr/ocr_engines/easy_pororo_ocr_core/: PORORO_OCR.ipynb  Pipfile  README.md  main.py
betterocr/ocr_engines/easy_pororo_ocr_core/pororo/: __init__.py
betterocr/ocr_engines/easy_pororo_ocr_core/pororo/models/brainOCR/: _modules.py
betterocr/ocr_engines/easy_pororo_ocr_core/pororo/tasks/: optical_character_recognition.py
betterocr/ocr_engines/easy_pororo_ocr_core/pororo/tasks/utils/: base.py  download_utils.py
betterocr/ocr_engines/easy_pororo_ocr_core/utils/: image_convert.py  pre_processing.py
betterocr/ocr_engines/tesseract/: __init__.py  job.py  mapping.py
betterocr/ocr_wrappers/: __init__.py
betterocr/ocr_wrappers/tesseract/: job.py
betterocr/wrappers/: __init__.py  easy_pororo_ocr.py
examples/: detect_boxes.py  detect_text.py
src/: index.ts
tests/: detect_boxes.py  detect_text.py
tests/parsers/: test_extract_json.py  test_extract_list.py
