[tool.poetry]
name = "betterocr"
version = "1.1.2"
description = "Better text detection by combining OCR engines with LLM."
authors = ["Junho Yeo <i@junho.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openai = { version = "^1.0.0b3", allow-prereleases = true }
pytesseract = "^0.3.10"
easyocr = "^1.7.1"
numpy = "^1.26.1"
pandas = "^2.1.2"
opencv-python = "^4.8.1.78"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.0"
pillow = "^10.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
